--- a/examples/my-example/config/bassin.toml
+++ b/examples/my-example/config/bassin.toml
@@ -1,21 +1,26 @@
-[description]
-project = "example run"
-basin = "example"
+# -----------------------------------------------------------------------------
+# DESCRIPTION
+# -----------------------------------------------------------------------------
+description.project = ""
+description.basin = ""
 
-[data]
-# forcings
-simulation.rainfall = "pluie.prn"
-simulation.pet = "etp.prn"
-simulation.air-temp = ""
-simulation.snowfall = ""
-forecast.rainfall = ""
-forecast.pet = ""
-forecast.air-temp = ""
-forecast.snowfall = ""
+# -----------------------------------------------------------------------------
+# DATA
+# -----------------------------------------------------------------------------
+# simulation forcings
+data.simulation.rainfall = "pluie.prn"
+data.simulation.pet = "etp.prn"
+data.simulation.air-temp = ""
+data.simulation.snowfall = ""
+# forecast forcings
+data.forecast.rainfall = ""
+data.forecast.pet = ""
+data.forecast.air-temp = ""
+data.forecast.snowfall = ""
 # observations
-observation.streamflow = "debit.prn"
-observation.piezo-level = "niveau.prn"
+data.observation.streamflow = "debit.prn"
+data.observation.piezo-level = "niveau.prn"
 # influences
-influence.pumping_or_injection = ""
+data.influence.pumping_or_injection = ""
 # others
-other.weather_tile_weights = ""
+data.other.weather_tile_weights = ""
