add missing description for TOML option example

--- a/examples/my-example/config/bassin.toml
+++ b/examples/my-example/config/bassin.toml
@@ -1,8 +1,8 @@
 # -----------------------------------------------------------------------------
 # DESCRIPTION
 # -----------------------------------------------------------------------------
-description.project = ""
-description.basin = ""
+description.project = "example run"
+description.basin = "example"
 
 # -----------------------------------------------------------------------------
 # DATA
